feat: start on unifying bukkit jar, fix forge on older mc versions down to 1.17 (due to java 17), improve logger