@@ -1,12 +1,14 @@
 package me.dexrn.rrdiscordbridge.fabric.multiversion;
 
 import com.vdurmont.semver4j.Semver;
+
 import me.dexrn.rrdiscordbridge.config.ConfigDirectory;
+
 import org.apache.commons.io.FileUtils;
 
 import java.io.File;
 import java.io.IOException;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.TreeMap;
 
 // hello boss,
@@ -26,12 +28,13 @@ public class FabricModsFactory {
 
     public FabricMods getFabricMods(Semver ver) {
         try {
-            //allows the user to just force a certain mod class if wanted
-            File forced = Path.of(ConfigDirectory.MOD.getPath(), "modClassOverride.txt").toFile();
+            // allows the user to just force a certain mod class if wanted
+            File forced =
+                    Paths.get(ConfigDirectory.MOD.getPath(), "mainClassOverride.txt").toFile();
             if (forced.exists() && forced.isFile())
-                return mods.get(new Semver(FileUtils.readFileToString(forced, "utf-8"), Semver.SemverType.LOOSE));
+                return FabricMods.valueOf(FileUtils.readFileToString(forced, "utf-8"));
         } catch (IOException ex) {
-            throw new RuntimeException("Couldn't read from mod class override", ex);
+            throw new RuntimeException("Couldn't read from main class override", ex);
         }
 
         if (mods.containsKey(ver)) return mods.get(ver);
